# Barcode-Recognition

./: CMakeLists.txt  README.md  build.sh
config/: fast_run_config.conf  sample_config.conf
python/: scan.py  utils.py  video.py  video_test.py
src/: config.cpp  image_proc.cpp  scan.cpp  scan_utils.cpp
src/include/: config.h  data.h  image_proc.h  scan.h  scan_utils.h
test/: real_time.cpp  scan_multiple.cpp  scan_test.cpp
